2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs, libstetic/Registry.cs: Allow
	  grouping several changes in the registry in a single transaction.
	* libsteticui/CodeGenerator.cs, libsteticui/Application.cs,
	  libsteticui/CodeGeneratorInternalClass.cs,
	  libsteticui/CodeGeneratorPartialClass.cs,
	  libsteticui/CodeGenerationResult.cs, libstetic/ObjectWrapper.cs,
	  libstetic/GeneratorContext.cs, libstetic/ErrorWidget.cs,
	  stetic/Stetic.cs: Added an option to allow generating code even
	  when not all referenced widgets are available. Added support for
	  warnings in the code generation methods, so the caller can get
	  information about what went wrong during the generation process.
	* libsteticui/Makefile.am: Added CodeGenerationResult.
	* libstetic/wrapper/Widget.cs: Clear the signal list when reloading a
	  widget. Fixed action group read code.
	* libstetic/wrapper/Table.cs: Always return the children of the table
	  in the same order, to avoid unneeded changes in the diff files.

2007-01-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ContainerUndoRedoManager.cs: Added missing file.

2007-01-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: When saving the designer session,
	  instead of deleting the old widget and adding the new one, update
	  the existing widget.
	* libsteticui/Application.cs: Added some thread locking.
	* libsteticui/Project.cs: When a widget name changed event is received,
	  update the corresponding component from the current thread, there
	  is no need to do it in the gui thread.
	* libstetic/wrapper/Container.cs: Added null check for container child.

2007-01-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/ActionGroupEditSession.cs: Added undo support for the
	  global action group designer.
	* libsteticui/ApplicationBackend.cs: Catch errors when loading a